--- a/src/app/views/edit-gp-organisation/edit-gp-organisation.component.html
+++ b/src/app/views/edit-gp-organisation/edit-gp-organisation.component.html
@@ -22,7 +22,8 @@
               <input class="form-control" formControlName="contactEmail" placeholder="Email" type="email">
             </div>
             <div class="form-group col-md-4">
-              <input class="form-control" formControlName="contactName" placeholder="Contact name" type="text">
+              <input class="form-control" formControlName="contactName" placeholder="Contact name" type="text"
+                maxlength="8">
             </div>
             <div class="form-group col-md-4">
               <input class="form-control" formControlName="phoneNumber" placeholder="Phone number" type="number">
@@ -38,4 +39,3 @@
     </div>
   </div>
 </div>
-
