--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -1,8 +1,49 @@
-<div class="container-fluid">
-  <app-header></app-header>
-  <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
-    <router-outlet></router-outlet>
+<div class="d-flex" id="wrapper">
+  <div class=" border-right" id="sidebar-wrapper" [ngClass]="status ? 'hide' : 'show'">
+    <div class="list-group list-group-flush navbar-brand px-auto">
+      <a routerLink="/" class="list-group-item list-group-item-action bg-light">GESPRO</a>
+      <ul class="navbar-nav px-2">
+        <span class="nav-section"><i class="fa-solid fa-users"></i>EMPLOYEES</span>
+        <ul class="navbar-nav">
+          <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
+                                  routerLink="/admin/employees"
+                                  routerLinkActive="active">List Employees</a></li>
+          <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item" routerLink="/admin/employees/nouveau"
+                 routerLinkActive="active">New</a></li>
+        </ul>
+
+        <span class="nav-section"><i class="fa-solid fa-address-book"></i>ADDRESS</span>
+        <ul class="navbar-nav">
+          <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
+                                  routerLink="/admin/addresses"
+                                  routerLinkActive="active">List Addresses</a></li>
+          <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item" routerLink="/admin/addresses/nouveau"
+                 routerLinkActive="active">New</a></li>
+        </ul>
+
+        <span class="nav-section"><i class="fa-solid fa-building"></i>ORGANISATIONS</span>
+        <ul class="navbar-nav">
+          <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
+                                  routerLink="/admin/organisations"
+                                  routerLinkActive="active">List Organisations</a></li>
+          <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item" routerLink="/admin/organisations/nouveau"
+                 routerLinkActive="active">New</a></li>
+        </ul>
+      </ul>
+    </div>
+  </div>
+  <div id="page-content-wrapper">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <i class="fa-solid fa-bars" (click)="clickEvent()"></i>
+      </div>
+    </nav>
+
+    <div class="container-fluid mt-3">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 
-  <footer></footer>
 </div>
+
+
