--- a/src/app/views/edit-gp-address/edit-gp-address.component.html
+++ b/src/app/views/edit-gp-address/edit-gp-address.component.html
@@ -6,6 +6,27 @@
       </h5>
     </div>
     <div class="card-body">
+      <div class="row">
+        <label class="col-form-label px-1">Créer une address pour :</label>
+        <div class="col">
+          <div class="form-check-inline">
+            <input (change)="showValue()" [(ngModel)]="isAdrForEmp" [value]="0" checked class="form-check-input"
+                   id="gridRadiosEmp"
+                   type="radio">
+            <label class="form-check-label px-1" for="gridRadiosEmp">
+              Organisation
+            </label>
+          </div>
+          <div class="form-check-inline">
+            <input (change)="showValue()" [(ngModel)]="isAdrForEmp" [value]="1" class="form-check-input"
+                   id="gridRadiosOrg" type="radio">
+            <label class="form-check-label px-1" for="gridRadiosOrg">
+              Employee
+            </label>
+          </div>
+        </div>
+      </div>
+      <hr>
       <form (ngSubmit)="save()" [formGroup]="addrForm">
         <div class="row my-1">
           <div class="form-group col-md-4">
@@ -23,7 +44,7 @@
           <div class="form-group col-md">
             <input class="form-control" formControlName="zipCode" placeholder="Zip code" type="number">
           </div>
-          <div class="form-group col-md-4">
+          <div *ngIf="!isAdrForEmp" class="form-group col-md-4">
             <select class="form-control" formControlName="gpOrganization">
               <option value="">Choisissez une organisation</option>
               <option *ngFor="let org of listOrganisations" [ngValue]="org" [selected]="org.id===gpOrganization?.id">
@@ -31,7 +52,7 @@
               </option>
             </select>
           </div>
-          <div class="form-group col-md-4">
+          <div *ngIf="isAdrForEmp" class="form-group col-md-4">
             <select class="form-control" formControlName="gpEmployee">
               <option [disabled]="true" [ngValue]="null">Choose employee</option>
               <option *ngFor="let emp of listEmployees" [ngValue]="emp" [selected]="emp.id===employee?.id">
@@ -47,7 +68,7 @@
 
             <div class="form-check">
               <input [value]="1" checked class="form-check-input" formControlName="isMain" id="gridRadios1"
-                type="radio">
+                     type="radio">
               <label class="form-check-label" for="gridRadios1">
                 Yes
               </label>
@@ -66,7 +87,6 @@
         </div>
       </form>
     </div>
-
-    <!-- <pre>{{ addrForm.value | json }}</pre> -->
   </div>
 </div>
+
