--- a/src/app/views/edit-gp-employee/edit-gp-employee.component.html
+++ b/src/app/views/edit-gp-employee/edit-gp-employee.component.html
@@ -10,7 +10,7 @@
             <div class="form-group col-md-4">
               <input class="form-control" formControlName="fileNumber" placeholder="File number" type="text">
               <p *ngIf="f.fileNumber.touched && f.fileNumber.invalid"
-                [ngClass]="f.fileNumber.invalid? 'text-danger':''">This field is required</p>
+                 [ngClass]="f.fileNumber.invalid? 'text-danger':''">This field is required</p>
             </div>
             <div class="form-group col-md-4">
               <input class="form-control" formControlName="firstname" placeholder="Firstname" type="text">
@@ -31,7 +31,7 @@
               <input class="form-control" formControlName="password" placeholder="Password" type="password">
             </div>
             <div class="form-group col-md-4">
-              <input class="form-control" formControlName="phoneNumber" placeholder="Phone" maxlength="8" type="text">
+              <input class="form-control" formControlName="phoneNumber" maxlength="8" placeholder="Phone" type="text">
             </div>
           </div>
           <div class="d-flex card-footer justify-content-center">
