--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -1,9 +1,9 @@
 <div class="d-flex" id="wrapper">
   <div class=" border-right" id="sidebar-wrapper" [ngClass]="status ? 'hide' : 'show'">
     <div class="list-group list-group-flush navbar-brand px-auto">
-      <a routerLink="/" class="list-group-item list-group-item-action bg-light">GESPRO</a>
+      <a routerLink="/" class="list-group-item list-group-item-action bg-light text-center modal-title">GESPRO</a>
       <ul class="navbar-nav px-2">
-        <span class="nav-section"><i class="fa-solid fa-users"></i>EMPLOYEES</span>
+       <span class="nav-section"> <i class="fa-solid fa-users mx-2"></i>EMPLOYEES</span>
         <ul class="navbar-nav">
           <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
                                   routerLink="/admin/employees"
@@ -12,7 +12,7 @@
                  routerLinkActive="active">New</a></li>
         </ul>
 
-        <span class="nav-section"><i class="fa-solid fa-address-book"></i>ADDRESS</span>
+        <span class="nav-section"><i class="fa-solid fa-address-book mx-2"></i>ADDRESS</span>
         <ul class="navbar-nav">
           <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
                                   routerLink="/admin/addresses"
@@ -21,7 +21,7 @@
                  routerLinkActive="active">New</a></li>
         </ul>
 
-        <span class="nav-section"><i class="fa-solid fa-building"></i>ORGANISATIONS</span>
+        <span class="nav-section"><i class="fa-solid fa-building mx-2"></i>ORGANISATIONS</span>
         <ul class="navbar-nav">
           <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
                                   routerLink="/admin/organisations"
