--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -1,49 +1,22 @@
-<div class="d-flex" id="wrapper">
-  <div class=" border-right" id="sidebar-wrapper" [ngClass]="status ? 'hide' : 'show'">
-    <div class="list-group list-group-flush navbar-brand px-auto">
-      <a routerLink="/" class="list-group-item list-group-item-action bg-light text-center modal-title">GESPRO</a>
-      <ul class="navbar-nav px-2">
-       <span class="nav-section"> <i class="fa-solid fa-users mx-2"></i>EMPLOYEES</span>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
-                                  routerLink="/admin/employees"
-                                  routerLinkActive="active">List Employees</a></li>
-          <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item" routerLink="/admin/employees/nouveau"
-                 routerLinkActive="active">New</a></li>
-        </ul>
-
-        <span class="nav-section"><i class="fa-solid fa-address-book mx-2"></i>ADDRESS</span>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
-                                  routerLink="/admin/addresses"
-                                  routerLinkActive="active">List Addresses</a></li>
-          <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item" routerLink="/admin/addresses/nouveau"
-                 routerLinkActive="active">New</a></li>
-        </ul>
-
-        <span class="nav-section"><i class="fa-solid fa-building mx-2"></i>ORGANISATIONS</span>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
-                                  routerLink="/admin/organisations"
-                                  routerLinkActive="active">List Organisations</a></li>
-          <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item" routerLink="/admin/organisations/nouveau"
-                 routerLinkActive="active">New</a></li>
-        </ul>
+<div class="container">
+  <header class="header">
+    <!--<nav class="navbar navbar-expand-lg sticky-top">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
+                                routerLink="/admin/employees"
+                                routerLinkActive="active">List Employees</a></li>
+        <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item" routerLink="/admin/employees/nouveau"
+               routerLinkActive="active">New</a></li>
       </ul>
-    </div>
-  </div>
-  <div id="page-content-wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <i class="fa-solid fa-bars" (click)="clickEvent()"></i>
+        <i class="fa-solid fa-bars"></i>
       </div>
-    </nav>
-
-    <div class="container-fluid mt-3">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-
+    </nav>-->
+    <app-header></app-header>
+  </header>
+  <body class="body mt-5">
+  <router-outlet></router-outlet>
+  </body>
+  <footer class="footer">m2i@2022</footer>
 </div>
-
 
