--- a/src/app/views/admin/header/header.component.html
+++ b/src/app/views/admin/header/header.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand bg-light navbar-light sticky-top">
+<nav class="navbar navbar-expand bg-light navbar-light sticky-top justify-content-between">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">GESPRO</a>
     <button class="navbar-toggler" data-bs-target="#collapsibleNavbar" data-bs-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse  " id="collapsibleNavbar">
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav ">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Employees</a>
