--- a/src/app/views/admin/sidebar/sidebar.component.html
+++ b/src/app/views/admin/sidebar/sidebar.component.html
@@ -1,1 +1,20 @@
-<p>sidebar works!</p>
+<div class="container vh-100">
+  <header class="header">
+    <nav class="navbar navbar-expand-lg sticky-top">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
+                                routerLink="/admin/employees"
+                                routerLinkActive="active">List Employees</a></li>
+        <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item" routerLink="/admin/employees/nouveau"
+               routerLinkActive="active">New</a></li>
+      </ul>
+      <div class="container-fluid">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+    </nav>
+  </header>
+  <body class="body">
+  <router-outlet></router-outlet>
+  </body>
+  <footer class="footer">m2i@2022</footer>
+</div>
