--- a/src/app/views/edit-gp-address/edit-gp-address.component.html
+++ b/src/app/views/edit-gp-address/edit-gp-address.component.html
@@ -1,92 +1,84 @@
-<div class="container">
-  <div class="card">
-    <div class="card-header">
-      <h5 class="card-title text-center">
-        {{ title }} address
-      </h5>
-    </div>
-    <div class="card-body">
-      <div class="row">
-        <label class="col-form-label px-1">Créer une address pour :</label>
-        <div class="col">
-          <div class="form-check-inline">
-            <input (change)="showValue()" [(ngModel)]="isAdrForEmp" [value]="0" checked class="form-check-input"
-                   id="gridRadiosEmp"
-                   type="radio">
-            <label class="form-check-label px-1" for="gridRadiosEmp">
-              Organisation
-            </label>
-          </div>
-          <div class="form-check-inline">
-            <input (change)="showValue()" [(ngModel)]="isAdrForEmp" [value]="1" class="form-check-input"
-                   id="gridRadiosOrg" type="radio">
-            <label class="form-check-label px-1" for="gridRadiosOrg">
-              Employee
-            </label>
-          </div>
-        </div>
+<div class="row">
+  <div class="d-flex mb-2">
+    <h5 class="text-black">{{ title }} address</h5>
+  </div>
+  <div class="row mb-3">
+    <label class="col-form-label">Créer une address pour un<span *ngIf="!isAdrForEmp">e</span>:</label>
+    <div class="col">
+      <div class="form-check-inline">
+        <input (change)="showValue()" [(ngModel)]="isAdrForEmp" [value]="0" checked class="form-check-input"
+               id="gridRadiosEmp"
+               type="radio">
+        <label class="form-check-label px-1" for="gridRadiosEmp">
+          Organisation
+        </label>
       </div>
-      <hr>
-      <form (ngSubmit)="save()" [formGroup]="addrForm">
-        <div class="row my-1">
-          <div class="form-group col-md-4">
-            <input class="form-control" formControlName="country" placeholder="Country" type="text">
-          </div>
-          <div class="form-group col-md-4">
-            <input class="form-control" formControlName="streetLabel" placeholder="Street label" type="text">
-          </div>
-          <div class="form-group col-md-4">
-            <input class="form-control" formControlName="streetNumber" placeholder="Street number" type="number">
-          </div>
-        </div>
-
-        <div class="row my-1">
-          <div class="form-group col-md">
-            <input class="form-control" formControlName="zipCode" placeholder="Zip code" type="number">
-          </div>
-          <div *ngIf="!isAdrForEmp" class="form-group col-md-4">
-            <select class="form-control" formControlName="gpOrganization">
-              <option value="">Choisissez une organisation</option>
-              <option *ngFor="let org of listOrganisations" [ngValue]="org" [selected]="org.id===gpOrganization?.id">
-                {{org.name}}
-              </option>
-            </select>
-          </div>
-          <div *ngIf="isAdrForEmp" class="form-group col-md-4">
-            <select class="form-control" formControlName="gpEmployee">
-              <option [disabled]="true" [ngValue]="null">Choose employee</option>
-              <option *ngFor="let emp of listEmployees" [ngValue]="emp" [selected]="emp.id===employee?.id">
-                {{emp.lastname}}
-              </option>
-            </select>
-          </div>
-        </div>
-        <div class="row">
-
-          <label class="col-form-label pt-0">Is your principal Adress?</label>
-          <div class="col-md-6">
-
-            <div class="form-check">
-              <input [value]="1" checked class="form-check-input" formControlName="isMain" id="gridRadios1"
-                     type="radio">
-              <label class="form-check-label" for="gridRadios1">
-                Yes
-              </label>
-            </div>
-            <div class="form-check">
-              <input [value]="0" class="form-check-input" formControlName="isMain" id="gridRadios2" type="radio">
-              <label class="form-check-label" for="gridRadios2">
-                No
-              </label>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex card-footer justify-content-center">
-          <button [disabled]="addrForm.invalid" class="btn btn-primary btn-sm mx-2" type="submit">Register</button>
-          <button class="btn btn-secondary btn-sm" type="reset">Reset</button>
-        </div>
-      </form>
+      <div class="form-check-inline">
+        <input (change)="showValue()" [(ngModel)]="isAdrForEmp" [value]="1" class="form-check-input"
+               id="gridRadiosOrg" type="radio">
+        <label class="form-check-label px-1" for="gridRadiosOrg">
+          Employee
+        </label>
+      </div>
     </div>
   </div>
-</div>
+  <form (ngSubmit)="save()" [formGroup]="addrForm">
+    <div class="row my-1">
+      <div class="form-group col-md-4">
+        <input class="form-control" formControlName="country" placeholder="Country" type="text">
+      </div>
+      <div class="form-group col-md-4">
+        <input class="form-control" formControlName="streetLabel" placeholder="Street label" type="text">
+      </div>
+      <div class="form-group col-md-4">
+        <input class="form-control" formControlName="streetNumber" placeholder="Street number" type="number">
+      </div>
+    </div>
 
+    <div class="row my-1">
+      <div class="form-group col-md">
+        <input class="form-control" formControlName="zipCode" placeholder="Zip code" type="number">
+      </div>
+      <div *ngIf="!isAdrForEmp" class="form-group col-md-4">
+        <select class="form-control" formControlName="gpOrganization">
+          <option value="">Choisissez une organisation</option>
+          <option *ngFor="let org of listOrganisations" [ngValue]="org" [selected]="org.id===gpOrganization?.id">
+            {{org.name}}
+          </option>
+        </select>
+      </div>
+      <div *ngIf="isAdrForEmp" class="form-group col-md-4">
+        <select class="form-control" formControlName="gpEmployee">
+          <option [disabled]="true" [ngValue]="null">Choose employee</option>
+          <option *ngFor="let emp of listEmployees" [ngValue]="emp" [selected]="emp.id===employee?.id">
+            {{emp.lastname}}
+          </option>
+        </select>
+      </div>
+    </div>
+    <div class="row">
+
+      <label class="col-form-label pt-0 text-primary align">Is your principal Adress?</label>
+      <div class="col-md-6">
+
+        <div class="form-check">
+          <input [value]="1" checked class="form-check-input" formControlName="isMain" id="gridRadios1"
+                 type="radio">
+          <label class="form-check-label" for="gridRadios1">
+            Yes
+          </label>
+        </div>
+        <div class="form-check">
+          <input [value]="0" class="form-check-input" formControlName="isMain" id="gridRadios2" type="radio">
+          <label class="form-check-label" for="gridRadios2">
+            No
+          </label>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center mt-3">
+      <button [disabled]="addrForm.invalid" class="btn btn-primary btn-sm mx-2" type="submit">Register</button>
+      <button class="btn btn-secondary btn-sm" type="reset">Reset</button>
+    </div>
+  </form>
+</div>
