--- a/src/app/views/edit-gp-organisation/edit-gp-organisation.component.html
+++ b/src/app/views/edit-gp-organisation/edit-gp-organisation.component.html
@@ -1,41 +1,37 @@
-<div class="container-fluid">
-  <div class="card">
-    <div class="card-header">
-      <h5 class="card-title text-center">
-        {{ title }} organisation
-      </h5>
-      <div class="card-body">
-        <form (ngSubmit)="save()" [formGroup]="organisationForm">
-          <div class="row my-1">
-            <div class="form-group col-md-4">
-              <input class="form-control" formControlName="orgCode" placeholder="Organization code" type="text">
-            </div>
-            <div class="form-group col-md-4">
-              <input class="form-control" formControlName="name" placeholder="Name" type="text">
-            </div>
-            <div class="form-group col-md-4">
-              <input class="form-control" formControlName="adrWeb" placeholder="Web adress" type="text">
-            </div>
-          </div>
-          <div class="row my-1">
-            <div class="form-group col-md-4">
-              <input class="form-control" formControlName="contactEmail" placeholder="Email" type="email">
-            </div>
-            <div class="form-group col-md-4">
-              <input class="form-control" formControlName="contactName" maxlength="8" placeholder="Contact name"
-                     type="text">
-            </div>
-            <div class="form-group col-md-4">
-              <input class="form-control" formControlName="phoneNumber" placeholder="Phone number" type="number">
-            </div>
-          </div>
-          <div class="d-flex card-footer justify-content-center">
-            <button [disabled]="organisationForm.invalid" class="btn btn-primary btn-sm mx-2" type="submit">Register
-            </button>
-            <button class="btn btn-secondary btn-sm" type="reset">Reset</button>
-          </div>
-        </form>
+<div class="row">
+  <div class="d-flex justify-content-between mb-2">
+    <h5 class="text-black">{{ title }} organisation</h5>
+  </div>
+  <div class="row">
+    <form (ngSubmit)="save()" [formGroup]="organisationForm">
+      <div class="row my-1">
+        <div class="form-group col-md-4">
+          <input class="form-control" formControlName="orgCode" placeholder="Organization code" type="text">
+        </div>
+        <div class="form-group col-md-4">
+          <input class="form-control" formControlName="name" placeholder="Name" type="text">
+        </div>
+        <div class="form-group col-md-4">
+          <input class="form-control" formControlName="adrWeb" placeholder="Web adress" type="text">
+        </div>
       </div>
-    </div>
+      <div class="row my-1">
+        <div class="form-group col-md-4">
+          <input class="form-control" formControlName="contactEmail" placeholder="Email" type="email">
+        </div>
+        <div class="form-group col-md-4">
+          <input class="form-control" formControlName="contactName" maxlength="8" placeholder="Contact name"
+                 type="text">
+        </div>
+        <div class="form-group col-md-4">
+          <input class="form-control" formControlName="phoneNumber" placeholder="Phone number" type="number">
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mt-3">
+        <button [disabled]="organisationForm.invalid" class="btn btn-primary btn-sm mx-2" type="submit">Register
+        </button>
+        <button class="btn btn-secondary btn-sm" type="reset">Reset</button>
+      </div>
+    </form>
   </div>
 </div>
