--- a/src/app/views/gp-employees/gp-employees.component.html
+++ b/src/app/views/gp-employees/gp-employees.component.html
@@ -1,42 +1,37 @@
-<div class="container">
-  <div class="row">
-    <div class="card">
-      <div class="card-header d-flex justify-content-between">
-        <h5 class="card-title">Employee List</h5>
-        <i class="fa fa-plus-circle text-primary fa-2x" routerLink="/admin/employees/nouveau" title="add"></i>
-      </div>
-      <div class="card-body">
-        <table class="table table-hover">
-          <thead>
-          <tr>
-            <th>File number</th>
-            <th>Last name</th>
-            <th>First name</th>
-            <th>Email</th>
-            <th>Login</th>
-            <th>Phone</th>
-            <th>Creation date</th>
-            <th>Action</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let emp of employeeList">
-            <td>{{emp.fileNumber}}</td>
-            <td>{{emp.lastname}}</td>
-            <td>{{emp.firstname}}</td>
-            <td>{{emp.email}}</td>
-            <td>{{emp.login}}</td>
-            <td>{{emp.phoneNumber}}</td>
-            <td>{{emp.creationDate}}</td>
-            <td>
-              <i (click)="edit(emp.id)" class="fa fa-user-edit text-primary mx-3" title="edit"></i>
-              <i (click)="delete(emp.id)" class="fa fa-trash-alt text-danger" title="Delete"></i>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+<div class="row">
+  <div class="d-flex justify-content-between mb-2">
+    <h5 class="text-black">Employee List</h5>
+    <i class="fa fa-plus-circle text-primary fa-2x" routerLink="/admin/employees/nouveau" title="add"></i>
   </div>
-
+  <div class="row">
+    <table class="table table-hover">
+      <thead>
+      <tr>
+        <th>File number</th>
+        <th>Last name</th>
+        <th>First name</th>
+        <th>Email</th>
+        <th>Login</th>
+        <th>Phone</th>
+        <th>Creation date</th>
+        <th>Action</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let emp of employeeList">
+        <td>{{emp.fileNumber}}</td>
+        <td>{{emp.lastname}}</td>
+        <td>{{emp.firstname}}</td>
+        <td>{{emp.email}}</td>
+        <td>{{emp.login}}</td>
+        <td>{{emp.phoneNumber}}</td>
+        <td>{{emp.creationDate}}</td>
+        <td>
+          <i (click)="edit(emp.id)" class="fa fa-user-edit text-primary mx-3" title="edit"></i>
+          <i (click)="delete(emp.id)" class="fa fa-trash-alt text-danger" title="Delete"></i>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
