--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -1,22 +1,20 @@
-<div class="container">
+<!--<div class="container">
   <header class="header">
-    <!--<nav class="navbar navbar-expand-lg sticky-top">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
-                                routerLink="/admin/employees"
-                                routerLinkActive="active">List Employees</a></li>
-        <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item" routerLink="/admin/employees/nouveau"
-               routerLinkActive="active">New</a></li>
-      </ul>
-      <div class="container-fluid">
-        <i class="fa-solid fa-bars"></i>
-      </div>
-    </nav>-->
     <app-header></app-header>
   </header>
   <body class="body mt-5">
   <router-outlet></router-outlet>
   </body>
   <footer class="footer">m2i@2022</footer>
-</div>
+</div>-->
 
+<div class="container">
+  <div class="header text-center">GESPRO</div>
+<div class="row justify-content-between">
+  <div class="sidebar col-md-3 col-sm-12 rounded-3">Sidebar</div>
+  <div class="content col-md-8 col-sm-12 mt-sm-3">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+  <div class="footer">Footer</div>
+</div>
