--- a/src/app/views/admin/admin.component.scss
+++ b/src/app/views/admin/admin.component.scss
@@ -1,8 +1,8 @@
 .header, .body, .footer {
   margin: 15px 0 15px -10px;
   width: auto;
-  background: #00D2FC;
-  color: black;
+  background: #0081CF;
+  color: white;
   border-radius: 10px 10px 0 0;
   padding: 5px;
   font-size: 15px;
@@ -42,4 +42,29 @@
 .footer {
   text-align: center;
   border-radius: 0 0 10px 10px;
+}
+
+.nav-section {
+  margin: 15px 0 15px -10px;
+  width: auto;
+  background: #002b5c;
+  color: white;
+  border-radius:10px 0 10px 0;
+  padding: 5px;
+  text-align: left;
+  font-size: 15px;
+  font-family: cursive;
+  box-shadow: 8px 8px 2px 1px rgba(0, 0, 255, .2);
+}
+
+.navbar-nav .active {
+  color: #FBEAFF;
+  border-radius:5px;
+  background: #0081CF;
+
+}
+.navbar-nav :hover {
+  color: #00D2FB;
+  background: none;
+  border-radius:5px;
 }
