debug API chef de projet

--- a/src/app/views/gp-project-managers/gp-project-managers.component.html
+++ b/src/app/views/gp-project-managers/gp-project-managers.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="d-flex justify-content-between mb-2">
       <h5 class="text-black">Project manager List</h5>
-      <i class="fa fa-plus-circle text-primary fa-2x" routerLink="/admin/project-managers/nouveau" title="add"></i>
+      <i class="fa fa-plus-circle text-primary fa-2x" routerLink="/admin/projectManagers/nouveau" title="add"></i>
     </div>
     <div class="row">
       <table class="table table-hover">
@@ -14,6 +14,7 @@
           <th>Login</th>
           <th>Phone</th>
           <th>Creation date</th>
+          <th>Projects</th>
           <th>Action</th>
         </tr>
         </thead>
@@ -26,6 +27,7 @@
           <td>{{emp.login}}</td>
           <td>{{emp.phoneNumber}}</td>
           <td>{{emp.creationDate}}</td>
+          <td>{{emp.gpProjects}}</td>
           <td>
             <i (click)="edit(emp.id)" class="fa fa-user-edit text-primary mx-3" title="edit"></i>
             <i (click)="delete(emp.id)" class="fa fa-trash-alt text-danger" title="Delete"></i>
