--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -29,7 +29,6 @@
                  routerLink="/admin/organisations/nouveau"
                  routerLinkActive="active">New</a></li>
         </ul>
-
         <span class="nav-section"><i class="fa-solid fa-building mx-2"></i>PROJECT MANAGERS</span>
         <ul class="navbar-nav">
           <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
@@ -37,6 +36,9 @@
                                   routerLinkActive="active">List Project Managers</a></li>
           <li><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
                  routerLink="/admin/projectManagers/nouveau"
+                 routerLinkActive="active">New</a></li>
+        </ul>
+
         <span class="nav-section"><i class="fa-solid fa-building mx-2"></i>PROJECTS</span>
         <ul class="navbar-nav">
           <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
