--- a/src/app/views/gp-project/gp-project.component.html
+++ b/src/app/views/gp-project/gp-project.component.html
@@ -7,14 +7,13 @@
       <table class="table table-hover">
         <thead>
         <tr>
-          <th>projectCode</th>
-          <th>name</th>
-          <th>description</th>
-          <th>amount</th>
-          <th>creationDate</th>
-          <th>startDate</th>
-          <th>endDate</th>
-          <th>updateDate</th>
+          <th>Project code</th>
+          <th>Project name</th>
+          <th>Description</th>
+          <th>Amount</th>
+          <th>Creation date</th>
+          <th>Start date</th>
+          <th>End date</th>
         </tr>
         </thead>
         <tbody>
@@ -26,7 +25,6 @@
           <td>{{proj.creationDate}}</td>
           <td>{{proj.startDate}}</td>
           <td>{{proj.endDate}}</td>
-          <td>{{proj.updateDate}}</td>
           <td>
             <i (click)="edit(proj.id)" class="fa fa-user-edit text-primary mx-3" title="edit"></i>
             <i (click)="delete(proj.id)" class="fa fa-trash-alt text-danger" title="Delete"></i>
