--- a/src/app/views/edit-gp-project/edit-gp-project.component.html
+++ b/src/app/views/edit-gp-project/edit-gp-project.component.html
@@ -10,13 +10,13 @@
             <input class="form-control" formControlName="amount" placeholder="amount" type="number">
           </div>
           <div class="form-group col-md-4">
-            <input class="form-control" formControlName="creationDate" maxlength="8" placeholder="creation date"
+            <input class="form-control" formControlName="creationDate" placeholder="creation date"
             onfocus="(this.type='date')" type="text">
           </div>
         </div>
         <div class="row my-1">
           <div class="form-group col-md-4">
-            <input class="form-control" formControlName="startDate" maxlength="8" placeholder=" start date"
+            <input class="form-control" formControlName="startDate"  placeholder=" start date"
             onfocus="(this.type='date')" type="text">
           </div>
           <div class="form-group col-md-4">
@@ -24,7 +24,7 @@
           </div>
          
           <div class="form-group col-md-4">
-            <input class="form-control" formControlName="upDate" maxlength="8" placeholder="update"
+            <input class="form-control" formControlName="upDate"  placeholder="update"
             onfocus="(this.type='date')" type="text">
           </div>
           <div class="form-group col-md-4">
