--- a/src/app/views/gp-addresses/gp-addresses.component.html
+++ b/src/app/views/gp-addresses/gp-addresses.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 <div class="d-flex justify-content-between mb-2">
   <h5 class="text-black">Address List</h5>
-  <i class="fa fa-plus-circle text-primary fa-2x" routerLink="/admin/address/nouveau" title="add"></i>
+  <i class="fa fa-plus-circle text-primary fa-2x" routerLink="/admin/addresses/nouveau" title="add"></i>
 </div>
 <div class="row">
   <table class="table table-hover">
