Modifiez la Q4 sur l’affichage de la liste des CDP afin qu’on puisse afficher les projets managés par un CDP : OK

--- a/src/app/views/edit-gp-project/edit-gp-project.component.html
+++ b/src/app/views/edit-gp-project/edit-gp-project.component.html
@@ -19,10 +19,10 @@
             <input class="form-control" formControlName="amount" placeholder="amount" type="number">
           </div>
           <div class="form-group col-md-4">
-            <input class="form-control" formControlName="startDate" placeholder=" start date" type="date">
+            <input class="form-control" formControlName="startDate" placeholder="start date" onfocus="(this.type='date')" type="text">
           </div>
           <div class="form-group col-md-4">
-            <input class="form-control" formControlName="endDate" placeholder="end Date" type="date">
+            <input class="form-control" formControlName="endDate" placeholder="end Date" onfocus="(this.type='date')" type="text">
           </div>
         </div>
         <div class="row my-1"> 
