--- a/src/app/views/gp-project-managers/gp-project-managers.component.html
+++ b/src/app/views/gp-project-managers/gp-project-managers.component.html
@@ -14,7 +14,6 @@
           <th>Login</th>
           <th>Phone</th>
           <th>Creation date</th>
-          <th>Projects</th>
           <th>Action</th>
         </tr>
         </thead>
@@ -29,6 +28,7 @@
           <td>{{emp.creationDate}}</td>
           <td>
             <i (click)="getProjectsByPM(emp.id)" class="fa fa text-primary mx-3" title="project" ></i>
+            <i (click)="getprojectsByPM(emp.id)"  class="fa fa-diagram-project" title="project" ></i>
             <i (click)="edit(emp.id)" class="fa fa-user-edit text-primary mx-3" title="edit"></i>
             <i (click)="delete(emp.id)" class="fa fa-trash-alt text-danger" title="Delete"></i>
           </td>
@@ -38,12 +38,36 @@
     </div>
   </div>
 
-  <div *ngIf="projectsList.length > 0 ">
-    <h5>Projet<span *ngIf="projectsList.length > 1">s</span> du manager {{emp.lastname}}</h5>
+  <hr>
+
+  <div *ngIf="projectsList.length > 0">
+    <div class="d-flex justify-content-md-between my-2">
+      <h5>Projet<span *ngIf="projectsList.length > 1">s</span> du manager <b>{{namePM}}</b></h5>
+     <i (click)="closeProjects()" class="fa fa-times-circle fa-2x text-black-50" title="close"></i>
+     <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Project code</th>
+          <th>Project name</th>
+          <th>Description</th>
+          <th>Amount</th>
+          <th>Creation date</th>
+          <th>Start date</th>
+          <th>End date</th>
+        </tr>
+        </thead>
+      <tbody>
+        <tr *ngFor="let proj of projectsList">
+          <td>{{proj.projectCode}}</td>
+          <td>{{proj.name}}</td>
+          <td>{{proj.description}}</td>
+          <td>{{proj.amount}}</td>
+          <td>{{proj.creationDate}}</td>
+          <td>{{proj.startDate}}</td>
+          <td>{{proj.endDate}}</td>
+      </tr>
+      </tbody> 
+    </table>
+    </div>
   </div>
-
-  <hr>
-  <hr>
-
-  <app-gp-project></app-gp-project>
   
