--- a/src/app/views/gp-project/gp-project.component.html
+++ b/src/app/views/gp-project/gp-project.component.html
@@ -14,6 +14,7 @@
           <th>Creation date</th>
           <th>Start date</th>
           <th>End date</th>
+          <th>Action</th>
         </tr>
         </thead>
         <tbody>
