changement icons chef de projet et projet

--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -29,7 +29,7 @@
                  routerLink="/admin/organisations/nouveau"
                  routerLinkActive="active">New</a></li>
         </ul>
-        <span class="nav-section"><i class="fa-solid fa-building mx-2"></i>PROJECT MANAGERS</span>
+        <span class="nav-section"><i class="fa-solid fa-users mx-2"></i>PROJECT MANAGERS</span>
         <ul class="navbar-nav">
           <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
                                   routerLink="/admin/projectManagers"
@@ -39,7 +39,7 @@
                  routerLinkActive="active">New</a></li>
         </ul>
 
-        <span class="nav-section"><i class="fa-solid fa-building mx-2"></i>PROJECTS</span>
+        <span class="nav-section"><i class="fa-solid fa-share-alt mx-2"></i>PROJECTS</span>
         <ul class="navbar-nav">
           <li class="nav-item"><a [routerLinkActiveOptions]="{exact: true}" class="dropdown-item"
                                   routerLink="/admin/projects"
