vue liste chef projet

--- a/src/app/views/gp-project/gp-project.component.html
+++ b/src/app/views/gp-project/gp-project.component.html
@@ -27,8 +27,8 @@
           <td>{{proj.startDate}}</td>
           <td>{{proj.endDate}}</td>
           <td>
-            <i (click)="edit(proj.id)" class="fa fa-user-edit text-primary mx-3" title="edit"></i>
-            <i (click)="delete(proj.id)" class="fa fa-trash-alt text-danger" title="Delete"></i>
+            <i (click)="edit(proj.id)" class="fa fa-user-edit text-primary " title="edit"></i>
+            <i (click)="delete(proj.id)" class="fa fa-trash-alt text-danger ms-2" title="Delete"></i>
           </td>
         </tr>
         </tbody>
